# lorenz-attractor

./: .gitignore  README.md  delta-plot.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: code-quality.yml  publish-to-pypi.yml  test.yml
src/lorenz_attractor/: __init__.py  cli.py
src/lorenz_attractor/analysis/: __init__.py  sections.py  stability.py  sweeps.py
src/lorenz_attractor/core/: __init__.py  lorenz.py  parameters.py  simulator.py
src/lorenz_attractor/export/: __init__.py  data.py  image.py  video.py
src/lorenz_attractor/integration/: __init__.py  integrators.py
src/lorenz_attractor/utils/: __init__.py
src/lorenz_attractor/visualization/: __init__.py  interactive.py  opengl_renderer.py  plotter.py  realtime.py
src/lorenz_attractor/web/: __init__.py  app.py
tests/: conftest.py  test_analysis_sections.py  test_analysis_stability.py  test_analysis_sweeps.py  test_backcompat_api.py  test_cli.py  test_export_data.py  test_integrators.py  test_lorenz.py  test_parameters.py  test_simulator.py  test_visualization_plotter.py  test_visualization_realtime.py  test_web_app.py
